	PR tree-optimization/18048 	* fold-const.c (try_move_mult_to_index): New function. 	(fold): Use try_move_mult_to_index. 	* tree-ssa-loop-ivopts.c (try_add_cand_for): Prefer common candidates. 	* tree-ssa-loop-niter.c (number_of_iterations_cond): Produce 	an all-ones unsigned constant without extra bits. 	* tree.c (build_low_bits_mask): New function. 	* tree.h (build_low_bits_mask): Declare.

git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@89708 138bc75d-0d04-0410-961f-82ee72b054a4